@startuml
hide empty members

package spoke {
    interface IVaultManager
}

interface IBaseRequestManager

interface IDepositManager
interface IRedeemManager

interface IAsyncDepositManager
interface ISyncDepositManager
interface IAsyncRedeemManager

interface IAsyncRequestManager
interface ISyncRequestManager

IBaseRequestManager -up-|> IVaultManager
IDepositManager -up-|> IBaseRequestManager
IRedeemManager -up-|> IBaseRequestManager

IAsyncDepositManager -up-|> IDepositManager
ISyncDepositManager -up-|> IDepositManager
IAsyncRedeemManager -up-|> IRedeemManager

IAsyncRequestManager -up-|> IAsyncDepositManager
IAsyncRequestManager -up-|> IAsyncRedeemManager

ISyncRequestManager -up-|> ISyncDepositManager

abstract BaseRequestManager
class AsyncRequestManager
class SyncRequestManager

AsyncRequestManager -up-|> BaseRequestManager
SyncRequestManager -up-|> BaseRequestManager

BaseRequestManager -up-|> IBaseRequestManager
AsyncRequestManager -up-|> IAsyncRequestManager
SyncRequestManager -up-|> ISyncRequestManager

@enduml
